[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/Pharaoh/Pharaoh_Unloaded/Senate_00001.png" type="Texture" id=1]
[ext_resource path="res://assets/Pharaoh/Pharaoh_Unloaded/C3title_00001.png" type="Texture" id=2]
[ext_resource path="res://scenes/UI/ListItems/ListingButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UI/Button1.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/large_on_black.tres" type="BitmapFont" id=5]
[ext_resource path="res://scenes/UI/Panel1.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/UI/Panel2.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/large_on_white.tres" type="BitmapFont" id=8]
[ext_resource path="res://scenes/UI/Button2.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/fonts/small_black_on_white.tres" type="BitmapFont" id=10]
[ext_resource path="res://assets/Pharaoh/Pharaoh_Unloaded/Load4_00001.png" type="Texture" id=11]
[ext_resource path="res://scenes/UI/OzyScrollContainer.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Pharaoh/Pharaoh_Unloaded/FE_ChooseGame_00001.png" type="Texture" id=13]
[ext_resource path="res://scripts/classes/LabelEx.gd" type="Script" id=14]
[ext_resource path="res://scripts/menus/GameSelection.gd" type="Script" id=15]
[ext_resource path="res://scripts/menus/MainMenu.gd" type="Script" id=16]
[ext_resource path="res://scripts/menus/FamilySelection.gd" type="Script" id=17]
[ext_resource path="res://scripts/menus/NoMissionWonYet.gd" type="Script" id=18]
[ext_resource path="res://scripts/menus/QuitGameConfirm.gd" type="Script" id=19]
[ext_resource path="res://scripts/menus/Splash.gd" type="Script" id=20]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 10.0

[node name="Root" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Main" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
script = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -153.0
margin_right = 140.0
margin_bottom = 36.0
custom_constants/separation = 16

[node name="BtnPlay" parent="Main/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 280.0
text = "TEXT_30_0"

[node name="BtnWebsite" parent="Main/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 41.0
margin_right = 280.0
margin_bottom = 66.0
text = "TEXT_30_2"

[node name="BtnEditor" parent="Main/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 82.0
margin_right = 280.0
margin_bottom = 107.0
text = "TEXT_30_3"

[node name="BtnScores" parent="Main/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 123.0
margin_right = 280.0
margin_bottom = 148.0
text = "TEXT_30_5"

[node name="BtnQuit" parent="Main/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 164.0
margin_right = 280.0
margin_bottom = 189.0
text = "TEXT_30_4"

[node name="FamilySelection" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6
script = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" parent="FamilySelection" instance=ExtResource( 6 )]
margin_left = 318.0
margin_top = 141.0
margin_right = 686.0
margin_bottom = 493.0

[node name="Label" type="Label" parent="FamilySelection/Panel"]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 8 )
text = "TEXT_292_3"
align = 1
valign = 1
script = ExtResource( 14 )

[node name="Panel" parent="FamilySelection/Panel" instance=ExtResource( 7 )]
margin_left = 16.0
margin_top = 77.0
margin_right = 320.0
margin_bottom = 269.0

[node name="OzyScrollContainer" parent="FamilySelection/Panel/Panel" instance=ExtResource( 12 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 37.0
margin_bottom = 0.0
__meta__ = {
"_edit_lock_": true
}
scroll_node_path = NodePath("Control/VBoxContainer")

[node name="Control" type="Control" parent="FamilySelection/Panel/Panel/OzyScrollContainer"]
margin_left = 6.0
margin_top = 5.0
margin_right = 298.0
margin_bottom = 187.0
rect_clip_content = true
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="FamilySelection/Panel/Panel/OzyScrollContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -150.0
custom_constants/separation = 0

[node name="ListingButton" parent="FamilySelection/Panel/Panel/OzyScrollContainer/Control/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 292.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = ":3"

[node name="ListingButton2" parent="FamilySelection/Panel/Panel/OzyScrollContainer/Control/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 16.0
margin_right = 292.0
margin_bottom = 32.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "jmhmgkjlkjh"

[node name="ListingButton3" parent="FamilySelection/Panel/Panel/OzyScrollContainer/Control/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 32.0
margin_right = 292.0
margin_bottom = 48.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "test21236"

[node name="BtnCreateFamily" parent="FamilySelection/Panel" instance=ExtResource( 9 )]
margin_left = 15.0
margin_top = 274.0
margin_right = 141.0
margin_bottom = 300.0
text = "TEXT_292_0"

[node name="BtnDeleteFamily" parent="FamilySelection/Panel" instance=ExtResource( 9 )]
margin_left = 147.0
margin_top = 274.0
margin_right = 272.0
margin_bottom = 300.0
text = "TEXT_292_1"

[node name="BtnProceed" parent="FamilySelection/Panel" instance=ExtResource( 9 )]
margin_left = 278.0
margin_top = 274.0
margin_right = 352.0
margin_bottom = 300.0
disabled = true
text = "TEXT_292_2"

[node name="BtnBack" parent="FamilySelection/Panel" instance=ExtResource( 9 )]
margin_left = 67.0
margin_top = 305.0
margin_right = 298.0
margin_bottom = 331.0
text = "TEXT_292_4"

[node name="GameSelection" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 6
script = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" parent="GameSelection" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -208.0
margin_right = 200.0
margin_bottom = 144.0

[node name="FamilyName" type="Label" parent="GameSelection/Panel"]
anchor_right = 1.0
margin_top = 13.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 8 )
text = "TEXT_293_5"
align = 1
script = ExtResource( 14 )

[node name="VBoxContainer" type="VBoxContainer" parent="GameSelection/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -60.0
margin_right = 116.0
margin_bottom = 129.0
custom_constants/separation = 16

[node name="BtnBegin" parent="GameSelection/Panel/VBoxContainer" instance=ExtResource( 9 )]
margin_right = 230.0
text = "TEXT_293_7"

[node name="BtnChooseMission" parent="GameSelection/Panel/VBoxContainer" instance=ExtResource( 9 )]
margin_top = 41.0
margin_right = 230.0
margin_bottom = 66.0
text = "TEXT_293_1"

[node name="BtnSaveGames" parent="GameSelection/Panel/VBoxContainer" instance=ExtResource( 9 )]
margin_top = 82.0
margin_right = 230.0
margin_bottom = 107.0
text = "TEXT_293_2"

[node name="BtnCustomMissions" parent="GameSelection/Panel/VBoxContainer" instance=ExtResource( 9 )]
margin_top = 123.0
margin_right = 230.0
margin_bottom = 148.0
text = "TEXT_293_3"

[node name="BtnBack" parent="GameSelection/Panel/VBoxContainer" instance=ExtResource( 9 )]
margin_top = 164.0
margin_right = 230.0
margin_bottom = 189.0
text = "TEXT_293_4"

[node name="NoMissionWonYet" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" parent="NoMissionWonYet" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -56.0
margin_right = 320.0
margin_bottom = 56.0
exclusive_input = true

[node name="Panel" parent="NoMissionWonYet/Panel" instance=ExtResource( 7 )]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="NoMissionWonYet/Panel/Panel"]
anchor_right = 1.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 5 )
text = "TEXT_5_141"
align = 1
valign = 1
script = ExtResource( 14 )

[node name="Label2" type="Label" parent="NoMissionWonYet/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -303.0
margin_top = -14.0
margin_right = 303.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 10 )
text = "TEXT_5_142"
align = 1
valign = 1
script = ExtResource( 14 )

[node name="BtnYes" parent="NoMissionWonYet/Panel" instance=ExtResource( 9 )]
margin_left = 104.0
margin_top = 69.0
margin_right = 324.0
margin_bottom = 95.0
text = "TEXT_18_1"

[node name="BtnNo" parent="NoMissionWonYet/Panel" instance=ExtResource( 9 )]
margin_left = 324.0
margin_top = 69.0
margin_right = 544.0
margin_bottom = 95.0
text = "TEXT_18_0"

[node name="QuitGameConfirm" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" parent="QuitGameConfirm" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -56.0
margin_right = 144.0
margin_bottom = 56.0
exclusive_input = true

[node name="Panel" parent="QuitGameConfirm/Panel" instance=ExtResource( 7 )]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="QuitGameConfirm/Panel/Panel"]
anchor_right = 1.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 5 )
text = "TEXT_5_1"
align = 1
valign = 1
script = ExtResource( 14 )

[node name="Label2" type="Label" parent="QuitGameConfirm/Panel"]
anchor_right = 1.0
margin_left = 45.0
margin_top = 40.0
margin_right = -55.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 10 )
text = "TEXT_5_0"
align = 1
valign = 1
script = ExtResource( 14 )

[node name="BtnYes" parent="QuitGameConfirm/Panel" instance=ExtResource( 9 )]
margin_left = 48.0
margin_top = 69.0
margin_right = 139.0
margin_bottom = 95.0
text = "TEXT_18_1"

[node name="BtnNo" parent="QuitGameConfirm/Panel" instance=ExtResource( 9 )]
margin_left = 139.0
margin_top = 69.0
margin_right = 230.0
margin_bottom = 95.0
text = "TEXT_18_0"

[node name="Splash" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
script = ExtResource( 20 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Main/VBoxContainer/BtnPlay" to="Main" method="_on_BtnPlay_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/BtnWebsite" to="Main" method="_on_BtnWebsite_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/BtnEditor" to="Main" method="_on_BtnEditor_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/BtnScores" to="Main" method="_on_BtnScores_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/BtnQuit" to="Main" method="_on_BtnQuit_pressed"]
[connection signal="visibility_changed" from="FamilySelection" to="FamilySelection" method="_on_FamilySelection_visibility_changed"]
[connection signal="pressed" from="FamilySelection/Panel/BtnCreateFamily" to="FamilySelection" method="_on_BtnCreateFamily_pressed"]
[connection signal="pressed" from="FamilySelection/Panel/BtnDeleteFamily" to="FamilySelection" method="_on_BtnDeleteFamily_pressed"]
[connection signal="pressed" from="FamilySelection/Panel/BtnProceed" to="FamilySelection" method="_on_BtnProceed_pressed"]
[connection signal="pressed" from="FamilySelection/Panel/BtnBack" to="FamilySelection" method="_on_BtnBack_pressed"]
[connection signal="visibility_changed" from="GameSelection" to="GameSelection" method="_on_GameSelection_visibility_changed"]
[connection signal="pressed" from="GameSelection/Panel/VBoxContainer/BtnBegin" to="GameSelection" method="_on_BtnBegin_pressed"]
[connection signal="pressed" from="GameSelection/Panel/VBoxContainer/BtnChooseMission" to="GameSelection" method="_on_BtnChooseMission_pressed"]
[connection signal="pressed" from="GameSelection/Panel/VBoxContainer/BtnSaveGames" to="GameSelection" method="_on_BtnSaveGames_pressed"]
[connection signal="pressed" from="GameSelection/Panel/VBoxContainer/BtnCustomMissions" to="GameSelection" method="_on_BtnCustomMissions_pressed"]
[connection signal="pressed" from="GameSelection/Panel/VBoxContainer/BtnBack" to="GameSelection" method="_on_BtnBack_pressed"]
[connection signal="clicked_outside" from="NoMissionWonYet/Panel" to="NoMissionWonYet" method="_on_Panel_clicked_outside"]
[connection signal="pressed" from="NoMissionWonYet/Panel/BtnYes" to="NoMissionWonYet" method="_on_BtnYes_pressed"]
[connection signal="pressed" from="NoMissionWonYet/Panel/BtnNo" to="NoMissionWonYet" method="_on_BtnNo_pressed"]
[connection signal="clicked_outside" from="QuitGameConfirm/Panel" to="QuitGameConfirm" method="_on_Panel_clicked_outside"]
[connection signal="pressed" from="QuitGameConfirm/Panel/BtnYes" to="QuitGameConfirm" method="_on_BtnYes_pressed"]
[connection signal="pressed" from="QuitGameConfirm/Panel/BtnNo" to="QuitGameConfirm" method="_on_BtnNo_pressed"]
[connection signal="focus_entered" from="Splash" to="Splash" method="_on_Splash_focus_entered"]
